# pyconth-2023

./: README.md  pycon-1.py  pycon-2.py  pycon-3.py  pycon-4.py  pyproject.toml
djangres/: manage.py
djangres/djangres/: asgi.py  settings.py  urls.py  wsgi.py
djanko/: manage.py
djanko/djanko/: asgi.py  settings.py  urls.py  wsgi.py
